# basilisk-simulation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  core_sim.py  main.py  main1.py  perovsat_iss_orbit.py  pmac.py  pyproject.toml  setup.sh
ExternalModules/hyteresisRods/: README.md  hyteresisRods.cpp  hyteresisRods.h  hyteresisRods.i
ExternalModules/magneticFieldWMMContinuous/: README.md  codeGenerator.py  magneticFieldWMMContinuous.h  magneticFieldWMMContinuous.i
ExternalModules/permanentMagnet/: permanentMagnet.cpp  permanentMagnet.h  permanentMagnet.i
PythonModules/: fakeDampening.py  hysteresisFactory.py  issOrbit.py  solarSystemFactory.py
hysteresis_configs/: hymu80_xy_axis.json  hymu80_z_axis.json
messages/: HysteresisDebugMsgPayload.h  MagneticFieldBaseContinuous.h
modules/: pmac.py
perovsat_modules/: PMAC.md  iss_orbit.py  pmac.py
python/perovsat_plugins/: __init__.py
sims/: base.py  dampening_test.py  wmm_pointing.py
